--- a/buy.html
+++ b/buy.html
@@ -6,9 +6,10 @@
 
 <style>
 body {
-  font-family: Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
   max-width: 600px;
-  margin: 40px;
+  margin: 40px auto;
+  padding: 0 20px;
 }
 
 h1 {
@@ -22,24 +23,50 @@ h1 {
 }
 
 .qty {
-  margin: 15px 0;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 20px;
 }
 
 .qty button {
-  padding: 4px 10px;
-  font-size: 16px;
-  margin: 0 5px;
+  width: 34px;
+  height: 34px;
+  font-size: 18px;
+  border: 1px solid #ccc;
+  background: #fff;
+  cursor: pointer;
 }
 
 .total {
-  margin: 15px 0;
   font-weight: bold;
+  margin-bottom: 25px;
 }
 
-.buy-btn {
-  padding: 6px 14px;
-  font-size: 14px;
+/* EXACT APPLE PAY STYLE */
+.apple-pay-btn {
+  width: 100%;
+  height: 50px;
+  background: #000;
+  color: #fff;
+  border: none;
+  border-radius: 12px;
+  font-size: 16px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
   cursor: pointer;
+}
+
+.apple-pay-btn:hover {
+  opacity: 0.9;
+}
+
+.apple-logo {
+  font-size: 18px;
+  line-height: 1;
 }
 </style>
 </head>
@@ -63,8 +90,9 @@ h1 {
   Total: <span id="total"></span>
 </div>
 
-<button class="buy-btn" onclick="payStripe()">
-  Pay with Apple Pay / Card
+<button class="apple-pay-btn" onclick="payStripe()">
+  <span class="apple-logo"></span>
+  Pay with Apple&nbsp;Pay / Card
 </button>
 
 <script>
