--- a/buy.html
+++ b/buy.html
@@ -40,17 +40,17 @@ h1 {
 
 .total {
   font-weight: bold;
-  margin-bottom: 25px;
+  margin-bottom: 30px;
 }
 
-/* EXACT APPLE PAY STYLE */
+/* 🔥 EXACT BLACK APPLE PAY BUTTON */
 .apple-pay-btn {
   width: 100%;
-  height: 50px;
-  background: #000;
-  color: #fff;
+  height: 52px;
+  background-color: #000000; /* PURE BLACK */
+  color: #ffffff;
   border: none;
-  border-radius: 12px;
+  border-radius: 9999px; /* PILL SHAPE */
   font-size: 16px;
   font-weight: 500;
   display: flex;
@@ -60,8 +60,8 @@ h1 {
   cursor: pointer;
 }
 
-.apple-pay-btn:hover {
-  opacity: 0.9;
+.apple-pay-btn:active {
+  opacity: 0.85;
 }
 
 .apple-logo {
