--- a/buy.html
+++ b/buy.html
@@ -40,17 +40,17 @@ h1 {
 
 .total {
   font-weight: bold;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 }
 
-/* 🔥 EXACT BLACK APPLE PAY BUTTON */
+/* 🔥 BLACK APPLE PAY STYLE BUTTON */
 .apple-pay-btn {
   width: 100%;
   height: 52px;
-  background-color: #000000; /* PURE BLACK */
-  color: #ffffff;
+  background: #000;
+  color: #fff;
   border: none;
-  border-radius: 9999px; /* PILL SHAPE */
+  border-radius: 9999px;
   font-size: 16px;
   font-weight: 500;
   display: flex;
@@ -67,6 +67,18 @@ h1 {
 .apple-logo {
   font-size: 18px;
   line-height: 1;
+}
+
+/* Remove / cancel button */
+.cancel-btn {
+  margin-top: 16px;
+  background: transparent;
+  border: none;
+  color: #555;
+  text-decoration: underline;
+  cursor: pointer;
+  display: block;
+  text-align: center;
 }
 </style>
 </head>
@@ -93,6 +105,10 @@ h1 {
 <button class="apple-pay-btn" onclick="payStripe()">
   <span class="apple-logo"></span>
   Pay with Apple&nbsp;Pay / Card
+</button>
+
+<button class="cancel-btn" onclick="cancelBuy()">
+  Remove product / Go back
 </button>
 
 <script>
@@ -122,6 +138,11 @@ updateTotal();
 function payStripe() {
   window.location.href =
     "https://buy.stripe.com/3cI4gy1S9aHT7Eq2Ab7Vm00";
+}
+
+function cancelBuy() {
+  // go back to product page (Google Sites or GitHub page)
+  window.history.back();
 }
 </script>
 
