--- a/buy.html
+++ b/buy.html
@@ -8,8 +8,8 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
   max-width: 600px;
-  margin: 40px auto;
-  padding: 0 20px;
+  margin: 30px auto;
+  padding: 0 20px 80px; /* extra bottom space */
 }
 
 h1 {
@@ -19,14 +19,14 @@ h1 {
 
 .price {
   font-size: 16px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .qty {
   display: flex;
   align-items: center;
   gap: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .qty button {
@@ -40,10 +40,10 @@ h1 {
 
 .total {
   font-weight: bold;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 
-/* 🔥 BLACK APPLE PAY STYLE BUTTON */
+/* BLACK APPLE PAY BUTTON */
 .apple-pay-btn {
   width: 100%;
   height: 52px;
@@ -60,25 +60,17 @@ h1 {
   cursor: pointer;
 }
 
-.apple-pay-btn:active {
-  opacity: 0.85;
-}
-
-.apple-logo {
-  font-size: 18px;
-  line-height: 1;
-}
-
-/* Remove / cancel button */
+/* REMOVE / GO BACK BUTTON */
 .cancel-btn {
-  margin-top: 16px;
+  display: block;
+  width: 100%;
+  margin-top: 14px;
   background: transparent;
   border: none;
-  color: #555;
+  color: #000;
+  font-size: 14px;
   text-decoration: underline;
   cursor: pointer;
-  display: block;
-  text-align: center;
 }
 </style>
 </head>
@@ -102,13 +94,14 @@ h1 {
   Total: <span id="total"></span>
 </div>
 
-<button class="apple-pay-btn" onclick="payStripe()">
-  <span class="apple-logo"></span>
-  Pay with Apple&nbsp;Pay / Card
-</button>
-
+<!-- REMOVE BUTTON MOVED ABOVE STRIPE -->
 <button class="cancel-btn" onclick="cancelBuy()">
   Remove product / Go back
+</button>
+
+<button class="apple-pay-btn" onclick="payStripe()">
+  <span></span>
+  Pay with Apple&nbsp;Pay / Card
 </button>
 
 <script>
@@ -141,7 +134,6 @@ function payStripe() {
 }
 
 function cancelBuy() {
-  // go back to product page (Google Sites or GitHub page)
   window.history.back();
 }
 </script>
