--- a/buy.html
+++ b/buy.html
@@ -8,8 +8,20 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
   max-width: 600px;
-  margin: 30px auto;
-  padding: 0 20px 80px; /* extra bottom space */
+  margin: 20px auto;
+  padding: 0 20px;
+}
+
+/* REMOVE / BACK — MUST BE AT TOP */
+.cancel-btn {
+  display: block;
+  margin-bottom: 20px;
+  background: none;
+  border: none;
+  color: #000;
+  font-size: 14px;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 h1 {
@@ -59,23 +71,15 @@ h1 {
   gap: 8px;
   cursor: pointer;
 }
-
-/* REMOVE / GO BACK BUTTON */
-.cancel-btn {
-  display: block;
-  width: 100%;
-  margin-top: 14px;
-  background: transparent;
-  border: none;
-  color: #000;
-  font-size: 14px;
-  text-decoration: underline;
-  cursor: pointer;
-}
 </style>
 </head>
 
 <body>
+
+<!-- 🔥 ALWAYS VISIBLE -->
+<button class="cancel-btn" onclick="cancelBuy()">
+  ← Remove product / Go back
+</button>
 
 <h1 id="name">Product</h1>
 
@@ -93,11 +97,6 @@ h1 {
 <div class="total">
   Total: <span id="total"></span>
 </div>
-
-<!-- REMOVE BUTTON MOVED ABOVE STRIPE -->
-<button class="cancel-btn" onclick="cancelBuy()">
-  Remove product / Go back
-</button>
 
 <button class="apple-pay-btn" onclick="payStripe()">
   <span></span>
