--- a/index.html
+++ b/index.html
@@ -1,84 +1,163 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Product</title>
+<title>Karim Floors</title>
+
+<style>
+body {
+  font-family: Arial, sans-serif;
+  max-width: 700px;
+  margin: auto;
+  padding: 20px;
+}
+
+.product {
+  border: 1px solid #ddd;
+  padding: 15px;
+  margin-bottom: 10px;
+}
+
+button {
+  background: black;
+  color: white;
+  border: none;
+  padding: 6px 10px;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+#cart {
+  border-top: 2px solid #000;
+  margin-top: 30px;
+  padding-top: 15px;
+}
+
+.qty-btn {
+  padding: 4px 8px;
+}
+</style>
 </head>
 
-<body style="
-  font-family: Arial, sans-serif;
-  max-width: 600px;
-  margin: 60px 20px 20px;
-">
+<body>
 
-<!-- 🔒 FIXED TOP BAR (ALWAYS VISIBLE) -->
-<div style="
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background: #fff;
-  border-bottom: 1px solid #ddd;
-  padding: 10px 20px;
-  z-index: 9999;
-">
-  <button
-    onclick="goBack()"
-    style="
-      background: none;
-      border: none;
-      color: #000;
-      font-size: 14px;
-      text-decoration: underline;
-      cursor: pointer;
-    "
-  >
-    ← Remove product / Go back
-  </button>
+<h1>Karim Floors</h1>
+
+<!-- PRODUCTS -->
+<div class="product">
+  <h3>Laminate Oak</h3>
+  <p>Price: 150</p>
+  <button onclick="addToCart('Laminate Oak',150)">Add</button>
 </div>
 
-<h1 id="name" style="font-size:26px; margin-bottom:10px;">
-  Product
-</h1>
+<div class="product">
+  <h3>Laminate Walnut</h3>
+  <p>Price: 180</p>
+  <button onclick="addToCart('Laminate Walnut',180)">Add</button>
+</div>
 
-<p style="font-size:16px; margin-bottom:20px;">
-  Price: <span id="price"></span> MAD
-</p>
+<div class="product">
+  <h3>Laminate Maple</h3>
+  <p>Price: 200</p>
+  <button onclick="addToCart('Laminate Maple',200)">Add</button>
+</div>
 
-<button
-  onclick="goBuy()"
-  style="
-    background:#000 !important;
-    color:#fff !important;
-    border:none !important;
-    padding:10px 20px !important;
-    font-size:14px !important;
-    border-radius:6px !important;
-    cursor:pointer !important;
-  "
->
-  Buy Now
-</button>
+<!-- CART -->
+<div id="cart">
+  <h2>Cart</h2>
+  <div id="cartItems"></div>
+  <h3 id="total">Total: 0</h3>
+  <button onclick="checkout()">Checkout</button>
+</div>
 
 <script>
-const params = new URLSearchParams(window.location.search);
-
-const name = params.get("name") || "Laminate Floor – 10Cl52799";
-const price = params.get("price") || "265";
-
-document.getElementById("name").textContent = name;
-document.getElementById("price").textContent = price;
-
-function goBuy() {
-  window.location.href =
-    "buy.html?name=" + encodeURIComponent(name) + "&price=" + price;
+function getCart() {
+  return JSON.parse(localStorage.getItem('karim_cart')) || [];
 }
 
-function goBack() {
-  // Works everywhere (iframe-safe)
-  window.location.href = document.referrer || "/";
+function saveCart(cart) {
+  localStorage.setItem('karim_cart', JSON.stringify(cart));
 }
+
+function addToCart(name, price) {
+  let cart = getCart();
+  let item = cart.find(p => p.name === name);
+
+  if (item) {
+    item.qty++;
+  } else {
+    cart.push({ name, price, qty: 1 });
+  }
+
+  saveCart(cart);
+  renderCart();
+}
+
+function removeOne(name) {
+  let cart = getCart();
+  let item = cart.find(p => p.name === name);
+
+  if (!item) return;
+
+  item.qty--;
+
+  if (item.qty <= 0) {
+    cart = cart.filter(p => p.name !== name);
+  }
+
+  saveCart(cart);
+  renderCart();
+}
+
+function removeAll(name) {
+  let cart = getCart();
+  cart = cart.filter(p => p.name !== name);
+  saveCart(cart);
+  renderCart();
+}
+
+function renderCart() {
+  let cart = getCart();
+  let html = '';
+  let total = 0;
+
+  if (cart.length === 0) {
+    document.getElementById('cartItems').innerHTML = 'Cart is empty';
+    document.getElementById('total').innerText = 'Total: 0';
+    return;
+  }
+
+  cart.forEach(item => {
+    let subtotal = item.price * item.qty;
+    total += subtotal;
+
+    html += `
+      <p>
+        <strong>${item.name}</strong><br>
+        ${item.qty} × ${item.price} = ${subtotal}
+        <button class="qty-btn" onclick="addToCart('${item.name}', ${item.price})">+</button>
+        <button class="qty-btn" onclick="removeOne('${item.name}')">−</button>
+        <button onclick="removeAll('${item.name}')">Remove</button>
+      </p>
+    `;
+  });
+
+  document.getElementById('cartItems').innerHTML = html;
+  document.getElementById('total').innerText = 'Total: ' + total;
+}
+
+function checkout() {
+  let cart = getCart();
+  if (cart.length === 0) {
+    alert('Cart is empty');
+    return;
+  }
+
+  alert('Proceed to Stripe checkout');
+  // Stripe integration goes here
+}
+
+renderCart();
 </script>
 
 </body>
